# gated-token-transfers

./: .gitignore  Anchor.toml  package-lock.json
programs/bouncer/: Cargo.toml
programs/bouncer/src/: errors.rs  lib.rs  merkle.rs  state.rs
programs/bouncer/src/instructions/: admin.rs  assert.rs  create_list.rs  entry.rs  merkle.rs  mod.rs
programs/transfer_hook/: Cargo.toml
programs/transfer_hook/src/: account_structs.rs  helpers.rs  lib.rs  state.rs
scripts/: init.ts
tests/: test_transfer.ts
