[package]
name = "bouncer"
version = "0.1.0"
description = "Bouncer allowlist/blocklist program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bouncer"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
solana-sha256-hasher = "2.3.0"
