[package]
name = "transfer_hook"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_hook"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed", "event-cpi"] }
anchor-spl = { version = "0.32.1", features = ["metadata", "associated_token"] }
spl-tlv-account-resolution = "0.11.1"
spl-token-2022 = "10.0.0"
spl-transfer-hook-interface = "2.1.0"
bouncer = { path = "../bouncer", features = ["cpi"] }



[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
